Adds spinner loading animation and minor styling changes

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to right, #d3cce3, #e9e4f0);
+  background: whitesmoke;
 }
 
 code {
