--- a/src/components/spinner.styles.css
+++ b/src/components/spinner.styles.css
@@ -1,34 +1,35 @@
-.container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+.loading {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+}
+.loader {
+  left: 50%;
+  margin-left: -4em;
+  font-size: 10px;
+  border: 0.8em solid rgba(218, 219, 223, 1);
+  border-left: 0.8em solid rgba(0, 0, 0, 1);
+  animation: spin 1.1s infinite linear;
+}
+.loader,
+.loader:after {
+  border-radius: 50%;
+  width: 8em;
+  height: 8em;
+  display: block;
+  position: absolute;
+  top: 50%;
+  margin-top: -4.05em;
 }
 
-.view {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-}
-
-@keyframes circle {
-  25% {
-    transform: rotate(140deg);
-    border-style: double;
-    border-color: grey;
+@keyframes spin {
+  0% {
+    transform: rotate(360deg);
   }
-  50% {
-    transform: rotate(270deg);
+  100% {
+    transform: rotate(0deg);
   }
-}
-
-.spinning::before {
-  content: "";
-  color: white;
-  height: 100px;
-  width: 100px;
-  background: transparent;
-  border-radius: 100%;
-  border: 10px solid #55b7e0;
-  animation: circle 1s infinite;
 }
