--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
     "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: whitesmoke;
+  background: linear-gradient(to top, #efefbb, #d4d3dd);
 }
 
 code {
